Udating homepage, adding link to GitHub

--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Pebblefish</title>
-    <link rel="stylesheet" media="screen" href="http://openfontlibrary.org/face/argh" rel="stylesheet" type="text/css"/>
+    <meta charset="utf-8"/>
+    <link rel="stylesheet" media="screen" href="http://openfontlibrary.org/face/argh" rel="stylesheet" type="text/css/"/>
+    <link rel="stylesheet" media="screen" href="http://openfontlibrary.org/face/neocyr" rel="stylesheet" type="text/css/"/>
     <link rel="stylesheet" href="styles.css" type="text/css"/>
   </head>
   
   <body>
-    We await the arrival of the <h1>Pebblefish.</h1>
+    <h2>About Us</h2>
+    <p>
+      We are an open-source project seeking to build a social network that values  user privacy and data security. We do not track, use targeted ads, or sell your data to third parties. And we believe you can be social and secure at the same time.
+      <br/><br/>
+      "No human being, however great, or powerful, was ever so free as a fish."<br/>
+      &nbsp;  — John Ruskin
+    </p>
+    <h2>Contribute</h2>
+    <p>
+    Are you a developer? Check out our project on <a href="https://github.com/pebblefish/pebblefish">GitHub</a> and sign up to be a swordfish.
+    </p>
   </body>
 </html>
